cabal-version:      2.4
name:               my-app
version:            0.1.0.0

license:            MIT
license-file:       LICENSE
author:             RAFAIDEEN Richard
maintainer:         richard.rafaideen@gmail.com

extra-source-files: CHANGELOG.md

executable my-app
    main-is:          Main.hs
    build-depends:    
        base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
